# uber-data-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  uber-data-analysis.code-workspace
.github/workflows/: ci-cd.yml
notebooks/: explore.ipynb
tests/controllers/: test_transform.py
tests/data/: test_input.csv
uber_data_analytics/: main.py  resources.py  settings.py
uber_data_analytics/controllers/: bookings_schema.py  extract.py  load.py  transform.py
uber_data_analytics/schemas/: transform.py
uber_data_analytics/services/: storage_service.py
