[project]
name = "uber-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "structlog>=25.4.0",
]
