[project]
name = "uber-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.35",
    "datetime>=5.5",
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "ruff>=0.13.1",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --strict-config"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
